--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ requires-python = ">=3.9"
 license = {text = "MIT"}
 dependencies = [
     "numpy>=1.23",
+    "pandas>=2.0",
+    "matplotlib>=3.7",
+    "optuna>=3.2",
 ]
 
 [project.urls]
