--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 dependencies = [
-    "numpy>=1.23",
-    "pandas>=2.0",
-    "matplotlib>=3.7",
-    "optuna>=3.2",
-    "scikit_learn>=1.7.2",
-    "econml>=0.14.0",
+    "numpy>=2.3.0",
+    "pandas>=2.3.0",
+    "matplotlib>=3.10.0",
+    "optuna>=4.4.0",
+    "scikit-learn>=1.6.0",
+    "econml>=0.16.0",
+    "scipy>=1.16.0",
+    "joblib>=1.5.0",
 ]
 
 [project.urls]
