--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.7.2
-optuna==3.2.0
-scikit_learn==1.7.2
-econml>=0.14.0
+numpy==2.3.2
+pandas==2.3.1
+matplotlib==3.10.5
+optuna==4.4.0
+scikit-learn==1.6.1
+econml==0.16.0
+scipy==1.16.2
+joblib==1.5.2
