--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-numpy==2.3.2
-pandas==2.3.1
-matplotlib==3.10.5
-optuna==4.4.0
-scikit-learn==1.6.1
-econml==0.16.0
-scipy==1.16.2
-joblib==1.5.2
+# Core dependencies
+numpy>=1.24.0,<3.0.0
+pandas>=2.0.0,<3.0.0
+matplotlib>=3.7.0,<4.0.0
+optuna>=3.2.0,<5.0.0
+scikit-learn>=1.3.0,<2.0.0
+scipy>=1.10.0,<2.0.0
+joblib>=1.3.0,<2.0.0
+
+# EconML and its dependencies
+econml>=0.14.0,<0.17.0
+lightgbm>=4.0.0,<5.0.0
+shap>=0.40.0,<0.50.0
+sparse>=0.14.0,<0.18.0
+statsmodels>=0.14.0,<0.15.0
